--- a/templates/home.html
+++ b/templates/home.html
@@ -134,7 +134,7 @@
                   <div class="col-md-3 col-sm-5 d_none">
                      <ul class="sign">
                         <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                        <li><a class="sign_btn" href="#">Registrarse</a></li>
+                        <li><a class="sign_btn" href="ingresar/">Ingresar</a></li>
                      </ul>
                   </div>
                </div>
