--- a/apps/usuario/templates/formRegistrarse.html
+++ b/apps/usuario/templates/formRegistrarse.html
@@ -1,4 +1,4 @@
-<form action = "{% url "add_user" %}" method="post">
+<form action = "{% url "register" %}" method="post">
 
     {% csrf_token %}
     {{form.as_p}}
