--- a/templates/index_consumidor.html
+++ b/templates/index_consumidor.html
@@ -33,7 +33,7 @@
           
           <ul id="sidebarnav">
             <div class="w-full bg-blue-100 h-10 flex justify-center items-center mb-10">
-              <h1 class='text-2xl font-medium'>INCIO</h1>
+              <h1 class='text-2xl font-medium'>INICIO</h1>
             </div>
             <li class="sidebar-item">
               <a class="sidebar-link" href="#" aria-expanded="false">
