--- a/templates/prestador_datos_personales.html
+++ b/templates/prestador_datos_personales.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Facturas</title>
+  <title>Prestador datos personales</title>
   <link rel="shortcut icon" type="image/png" href={% static "images/dash/logos/seodashlogo.png"%} />
   <link rel="stylesheet" href={% static "css/dash/styles.min.css"%} />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -47,7 +47,7 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="#" aria-expanded="false">
+              <a class="sidebar-link" href="contratos/" aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:layers-minimalistic-bold-duotone" class="fs-6"></iconify-icon>
                 </span>
@@ -63,7 +63,15 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="./ui-forms.html" aria-expanded="false">
+              <a class="sidebar-link" href="direcciones/" aria-expanded="false">
+                <span>
+                  <iconify-icon icon="solar:planet-3-bold-duotone" class="fs-6"></iconify-icon>
+                </span>
+                <span class="hide-menu fs-3">Direcciones</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="datos/" aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:file-text-bold-duotone" class="fs-6"></iconify-icon>
                 </span>
@@ -133,35 +141,39 @@
           <div class="col-lg-12 pl-1">
             <div class="card ">
               <div class="card-body ">
-                <h5 class="card-title fs-6 font-semibold">Mis Facturas</h5>
+                <h5 class="card-title fs-6 font-semibold">Datos personales</h5>
                 <div class="table-responsive">
                   <table class="table text-nowrap align-middle mb-0">
                     <thead>
                       <tr class="border-2 border-bottom border-primary border-0"> 
                         <th scope="col" class="text-center">Ver mas</th>
-                        <th scope="col" class="text-center">Fecha de emisión</th>
-                        <th scope="col" class="text-center">Monto total</th>
-                        <th scope="col" class="text-center">Detalle servicio</th>
+                        <th scope="col" class="ps-4">Nombres</th>
+                        <th scope="col" class="text-center">Apellidos</th>
+                        <th scope="col" class="ps-4">DNI</th>
+                        <th scope="col" class="text-center">Email</th>
+                        <th scope="col" class="text-center">Teléfono</th>
+                        <th scope="col" class="text-center">CUIL/CUIT</th>
+                        <th scope="col" class="text-center">Estudios</th>
                       </tr>
                     </thead>
                     <tbody class="table-group-divider">
-                      {% for factura in facturas %}
                         <tr>
                           <td class="text-center fw-medium">
                             <button type="button" class="flex justify-center items-center text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full px-3 py-3 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
                                 <img src="{% static 'images/dash/logos/file-search.svg' %}" alt="Ícono" class="w-6 h-6">
                             </button>
                           </td>
-                          <td class="text-center fw-medium">{{ factura.fecha_emision }}</td>
-                          <td class="text-center fw-medium">{{ factura.monto_total }}</td>
-                          <td class="text-center fw-medium">{{ contrato.servicio_prestado.servicio.nombre }}</td>
+                          <td class="text-center fw-medium">{{ prestador.rol_usuario.usuario.nombre }}</td>
+                          <td class="text-center fw-medium">{{ prestador.rol_usuario.usuario.apellido }}</td>
+                          <td class="text-center fw-medium">{{ prestador.rol_usuario.usuario.dni }}</td>
+                          <td class="text-center fw-medium">{{ prestador.rol_usuario.usuario.email }}</td>
+                          <td class="text-center fw-medium">{{ prestador.rol_usuario.usuario.telefono }}</td>
+                          <td class="text-center fw-medium">{{ prestador.cuit }}</td>
+                          <td class="text-center fw-medium">{{ prestador.estudios }}</td>
                           {% comment %} <td>
                             <a href="javascript:void(0)" class="link-primary text-dark fw-medium d-block">/index.html</a>
                           </td> {% endcomment %}
-                          
                         </tr>
-                      {% endfor %}
-                      
                     </tbody>
                   </table>
                 </div>
