--- a/templates/prestador_direcciones.html
+++ b/templates/prestador_direcciones.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Prestador</title>
+  <title>Direcciones</title>
   <link rel="shortcut icon" type="image/png" href={% static "images/dash/logos/seodashlogo.png"%} />
   <link rel="stylesheet" href={% static "css/dash/styles.min.css"%} />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -141,12 +141,46 @@
           <div class="col-lg-12 pl-1">
             <div class="card ">
               <div class="card-body ">
-                <h5 class="card-title fs-6 font-semibold">HAY QUE PENSAR QUE PONEMOS EN ESTA SECCION sobre el prestador {{ prestador.rol_usuario.usuario.nombre }} {{ prestador.rol_usuario.usuario.apellido }}!!!!</h5>
-
+                <h5 class="card-title fs-6 font-semibold">Direcciones de {{ prestador.rol_usuario.usuario.nombre }} {{ prestador.rol_usuario.usuario.apellido }}</h5>
+                <div class="table-responsive">
+                  <table class="table text-nowrap align-middle mb-0">
+                    <thead>
+                      <tr class="border-2 border-bottom border-primary border-0"> 
+                        <th scope="col" class="text-center">Ver mas</th>
+                        <th scope="col" class="text-center">Calle</th>
+                        <th scope="col" class="text-center">Altura</th>
+                        <th scope="col" class="text-center">Departamento</th>
+                        <th scope="col" class="text-center">Localidad</th>
+                      </tr>
+                    </thead>
+                    <tbody class="table-group-divider">
+                        {% for direccion in direcciones %}
+                        <tr>
+                          <td class="text-center fw-medium">
+                            <button type="button" class="flex justify-center items-center text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full px-3 py-3 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+                                <img src="{% static 'images/dash/logos/file-search.svg' %}" alt="Ícono" class="w-6 h-6">
+                            </button>
+                          </td>
+                          <td class="text-center fw-medium">{{ direccion.calle }}</td>
+                          <td class="text-center fw-medium">{{ direccion.altura }}</td>
+                          <td class="text-center fw-medium">{{ direccion.departamento }}</td>
+                          <td class="text-center fw-medium">{{ direccion.localidad }}</td>
+                          {% comment %} <td>
+                            <a href="javascript:void(0)" class="link-primary text-dark fw-medium d-block">/index.html</a>
+                          </td> {% endcomment %}
+                          
+                        </tr>
+                      {% endfor %}
+                      
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
         </div>
+
+      
         <div class="py-6 px-6 text-center">
           <p class="mb-0 fs-4">Design and Developed by <a href="https://adminmart.com/" target="_blank"
               class="pe-1 text-primary text-decoration-underline">AdminMart.com</a>Distributed by <a href="https://themewagon.com/" target="_blank"
