--- a/apps/prestador/templates/prestador_panel.html
+++ b/apps/prestador/templates/prestador_panel.html
@@ -7,7 +7,7 @@
     <div class="col-lg-12 pl-1">
       <div class="card ">
         <div class="card-body ">
-          <h5 class="card-title fs-6 font-semibold">NO SE QUE PONER ACÁ EN ESTA PANTALLA :( </h5>
+          <h5 class="card-title fs-6 font-semibold">Mi Informacion </h5>
             <div class="table-responsive">
               <table class="table text-nowrap align-middle mb-0">
                 <thead>
