--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,7 +14,7 @@
                 <img src= {%static 'images/herramientas.png' %} alt="Logo"> <!-- Añadir logo aquí -->
             </div>
             <h2>LOG IN</h2>
-            <form action="/login/" method="POST">
+            <form action="consumidor/" method="POST">
                 {% csrf_token %}
                 <div class="input-group">
                     <label for="username">Usuario</label>
