--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- site metas -->
-   <title>webwing</title>
+   <title>Servicios ya!</title>
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
@@ -113,7 +113,7 @@
                                  <a class="nav-link" href="index.html"> Inicio </a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">Acerca de nosotros </a>
+                                 <a class="nav-link" href=#aboutus>Acerca de nosotros </a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="service.html">Servicios</a>
@@ -172,13 +172,15 @@
             <div class="col-md-12 col-lg-7">
                <div class="about_box">
                   <div class="titlepage">
-                     <h2><strong class="yellow">Acerca de nosotros</strong><br> WE CAN HELP YOUR business GROW</h2>
+                     <h2 id="aboutus"><strong class="yellow">Acerca de nosotros</strong><br> SERVICIOS YA! </h2>
                   </div>
-                  <h3>TODO LO QUE NECESITAS EN UN SOLO LUGAR</h3>
-                  <span>HELP YOUR NEXT CAREER MOVE MORE SMOOTHER AND <br> MORE EFFICIENT</span>
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of usingt</p>
-                  <span class="try">TRY ONLINE CV BUILDER FOR Free</span>
-                  <a class="read_morea" href="#">Get Started <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                  <h3>Te conecta con expertos soluciona tus necesidades</h3>
+                  <span>nuestra visión es ser la plataforma líder para la conexión entre profesionales independientes y consumidores</span>
+                  <p>Queremos hacer que los servicios de reparación y mantenimiento sean más accesibles, transparentes y confiables para todos. Estamos comprometidos con la excelencia en el servicio, la seguridad y la satisfacción del cliente. Nos aseguramos de que todos los prestadores de servicios en nuestra plataforma sean verificados, para que puedas tener la confianza de que estás trabajando con los mejores en su campo. </p>
+                  <p>
+                     Somos un equipo de emprendedores y profesionales apasionados por la tecnología, la innovación y la creación de soluciones que hagan la vida más fácil. Trabajamos día a día para ofrecer una plataforma que sea intuitiva, segura y eficiente, tanto para los prestadores de servicios como para los usuarios.
+                  </p>
+                  <span class="try">Conecta con los mejores profesionales hoy mismo!</span>
                </div>
             </div>
             <div class="col-md-12 col-lg-5">
@@ -196,7 +198,7 @@
          <div class="row">
             <div class="col-md-7">
                <div class="titlepage">
-                  <h2><strong class="yellow">service</strong><br> WE CAN HELP YOUR business GROW</h2>
+                  <h2><strong class="yellow">servic</strong><br> Te ayudamos a conectar con quien necesites</h2>
                </div>
             </div>
          </div>
