--- a/templates/about.html
+++ b/templates/about.html
@@ -22,12 +22,12 @@
       <link rel="stylesheet" href={% static "css/responsive.css"%}>
       <link rel="stylesheet" href={% static "css/owl.carousel.min.css"%}>
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href={% static "images/fevicon.png"%} type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href={% static "css/jquery.mCustomScrollbar.min.css"%}>
       <!-- Tweaks for older IEs-->
-      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+      <link rel="stylesheet" href={% static "https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"%}>
+      <link rel="stylesheet" href={% static "https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"%} media="screen">
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -35,9 +35,9 @@
    <!-- body -->
    <body class="main-layout">
       <!-- loader  -->
-      <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="#" /></div>
-      </div>
+      <!-- <div class="loader_bg">
+         <div class="loader"><img src={% static "images/loading.gif"%} alt="#" /></div>
+      </div> -->
       <!-- end loader -->
       <!-- header -->
       <header>
@@ -88,7 +88,7 @@
                         </ul>
                      </div>
                      <div class="col-md-4 col-sm-4 " >
-                        <a class="logo" href="#"><img src="images/logo.png" alt="#"/></a>
+                        <a class="logo" href="#"><img src={% static "images/logo.png"%} alt="#"/></a>
                      </div>
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon ">
@@ -162,7 +162,7 @@
                </div>
                <div class="col-md-12 col-lg-5">
                   <div class="about_img">
-                     <figure><img src="images/about_img2.jpg" alt="#"/></figure>
+                     <figure><img src={% static "images/about_img2.jpg"%} alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -176,7 +176,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
-                     <a class="logo2" href="#"><img src="images/loogo2.png" alt="#"/></a>
+                     <a class="logo2" href="#"><img src={% static "images/loogo2.png"%} alt="#"/></a>
                   </div>
                   <div class="col-lg-5 col-md-6 col-sm-6">
                      <h3>Contact Us</h3>
