--- a/static/css/nice-select.css
+++ b/static/css/nice-select.css
@@ -3,7 +3,7 @@
 ---------------------------------------------------------------------*/
 
 .nice-select {
-  background-color: #f6f6f6;
+  background-color: #ffffff;
   border-radius: 0;
   box-sizing: border-box;
   clear: both;
@@ -32,7 +32,7 @@
 
 .nice-select:after {
   border-bottom: 2px solid #999;
-  border-right: 2px solid #999;
+  border-right: 2px solid #adadad;
   content: '';
   display: block;
   height: 5px;
@@ -111,7 +111,7 @@
 }
 
 .nice-select .list {
-  background-color: #fff;
+  background-color: #032154;
   border-radius: 5px;
   box-shadow: 0 0 0 1px rgba(68, 68, 68, 0.11);
   box-sizing: border-box;
