--- a/apps/ubicacion/templates/formUbicacion.html
+++ b/apps/ubicacion/templates/formUbicacion.html
@@ -1,6 +1,6 @@
 {% extends "directions.html" %}
 {% load tailwind_filters %}
-
+{% load static %}
 {% block content %}
 
     <div class="w-2/3 max-w-2x1 mx-auto sm:px-1 lg:px-8">
