--- a/apps/usuario/templates/formRegistrarse.html
+++ b/apps/usuario/templates/formRegistrarse.html
@@ -3,22 +3,32 @@
 {% load static %}
 
 {% block content %}
+<div class="w-full max-w-lg mx-auto p-6 sm:px-6 lg:px-8">
 
-<div class="w-2/3 max-w-2x1 mx-auto sm:px-6 lg:px-8">
-    
-    <div class="grid justify-items-center">
-        <img src={% static "images/logoServiciosya.png"%}>
+    <!-- Logo -->
+    <div class="grid justify-items-center mb-6">
+        <img src="{% static 'images/logoServiciosya.png' %}" alt="Logo ServiciosYa" class="w-32">
     </div>
-    <div class="container bg-orange-50 h-12 mb-4">
-        <h1 class="text-4xl font-bold mb-8 text-center">Registrate</h1>
-    </div>
-    <form action = "{% url "register" %}" method="post">
 
+    <!-- Título -->
+    <div class="container bg-orange-50 p-4 rounded shadow-md mb-6">
+        <h1 class="text-4xl font-bold text-center text-orange-600">Regístrate</h1>
+    </div>
+
+    <!-- Formulario -->
+    <form action="{% url 'register' %}" method="post" class="space-y-4">
         {% csrf_token %}
-        {{form|crispy}}
-        <button type='submit' class="mt-4 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Registrarse</button>
-        <button type="reset" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 ml-3 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Limpiar</button>
+        {{ form|crispy }}
+        
+        <!-- Botones -->
+        <div class="flex justify-center space-x-4">
+            <button type="submit" class="flex items-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                <i class="fa fa-user-plus mr-2"></i> Registrarse
+            </button>
+            <button type="reset" class="flex items-center text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">
+                <i class="fa fa-undo mr-2"></i> Limpiar
+            </button>
+        </div>
     </form>
 </div>
-
 {% endblock %}
