--- a/templates/index_consumidor.html
+++ b/templates/index_consumidor.html
@@ -77,12 +77,15 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="./authentication-login.html" aria-expanded="false">
-                <span>
-                  <iconify-icon icon="solar:login-3-bold-duotone" class="fs-6"></iconify-icon>
-                </span>
-                <span class="hide-menu fs-3">Cerrar sesion</span>
-              </a>
+              <form method="post" action="{% url 'logout' %}" style="display: inline;">
+                {% csrf_token %}
+                <button type="submit" class="sidebar-link btn btn-link" style="background: none; border: none;">
+                  <span>
+                    <iconify-icon icon="solar:login-3-bold-duotone" class="fs-6"></iconify-icon>
+                  </span>
+                  <span class="hide-menu fs-3">Cerrar sesión</span>
+                </button>
+              </form>
             </li>
             
           </ul>
@@ -100,6 +103,10 @@
         <nav class="navbar navbar-expand-lg navbar-light">
 
           <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
+            <div>
+              <h2>Bienvenido {{ usuario.username }}</h2>
+              <p>Correo electrónico: {{ usuario.email }}</p>
+            </div>
             <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
               <a href="#" target="_blank"
                 class="btn btn-primary me-2"><span class="d-none d-md-block">Quiero prestar servicio Ya!</span> <span class="d-block d-md-none">Pro</span></a>
@@ -124,7 +131,10 @@
                       <i class="ti ti-list-check fs-6"></i>
                       <p class="mb-0 fs-3">Mi billetera</p>
                     </a>
-                    <a href="./login.html" class="btn btn-outline-primary mx-3 mt-2 d-block">Cerrar sesion</a>
+                    <form method="post" action="{% url 'logout' %}">
+                      {% csrf_token %}
+                      <button type="submit" class="btn btn-outline-primary mx-3 mt-2 d-block">Cerrar sesión</button>
+                    </form>
                   </div>
                 </div>
               </li>
