--- a/templates/home.html
+++ b/templates/home.html
@@ -97,7 +97,7 @@
                                  <a class="nav-link" href=#aboutus>Acerca de nosotros </a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="service.html">Servicios</a>
+                                 <a class="nav-link" href="{% url 'servicios' %}">Servicios</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="team.html">Equipo </a>
@@ -751,7 +751,7 @@
                         <a href="about.html">
                            </i>Nosotros
                      </li>
-                     <li> <a href="service.html"> </i>Servicios</a></li>
+                     <li> <a href="{% url 'servicios' %}"> </i>Servicios</a></li>
                      <li> <a href="team.html"></i>Equipo</a></li>
                      <li> <a href="client.html"></i>Clientes</a></li>
                      <li> <a href="contact.html"></i>Contactanos</a></li>
