--- a/apps/consumidor/templates/consumidor_contratos.html
+++ b/apps/consumidor/templates/consumidor_contratos.html
@@ -1,4 +1,4 @@
-{% extends 'index_prestador.html' %}
+{% extends 'index_consumidor.html' %}
 {% load static %}
 {% block content %}
 
@@ -7,16 +7,15 @@
     <div class="col-lg-12 pl-1">
       <div class="card ">
         <div class="card-body ">
-          <h5 class="card-title fs-6 font-semibold">Mis contratos</h5>
+          <h5 class="card-title fs-6 font-semibold">Mis contrataciones</h5>
             <div class="table-responsive">
               <table class="table text-nowrap align-middle mb-0">
                 <thead>
                   <tr class="border-2 border-bottom border-primary border-0"> 
                     <th scope="col" class="text-center">Ver mas</th>
-                    <th scope="col" class="text-center">Fecha del servicio</th>
+                    <th scope="col" class="ps-4">Fecha del servicio</th>
                     <th scope="col" class="text-center">Servicio</th>
                     <th scope="col" class="text-center">Direccion</th>
-                    <th scope="col" class="text-center">Estado</th>
                     <th scope="col" class="text-center">Precio</th>
                     </tr>
                 </thead>
@@ -31,7 +30,6 @@
                       <td class="text-center fw-medium">{{contrato.fecha_servicio}}</td>
                       <td class="text-center fw-medium">{{contrato.servicio_prestado.servicio.nombre}}</td>
                       <td class="text-center fw-medium">{{contrato.direccion.direccionCompleta}}</td>
-                      <td class="text-center fw-medium">{{contrato.estado}}</td>
                       <td class="text-center fw-medium">AR$ {{contrato.precio_acordado}}</td>
                       {% comment %} <td>
                       <a href="javascript:void(0)" class="link-primary text-dark fw-medium d-block">/index.html</a>
