--- a/apps/consumidor/templates/consumidor_pagos.html
+++ b/apps/consumidor/templates/consumidor_pagos.html
@@ -1,4 +1,4 @@
-{% extends 'index_prestador.html' %}
+{% extends 'index_consumidor.html' %}
 {% load static %}
 {% block content %}
 
@@ -7,32 +7,34 @@
     <div class="col-lg-12 pl-1">
       <div class="card ">
         <div class="card-body ">
-          <h5 class="card-title fs-6 font-semibold">Mis contratos</h5>
+          <h5 class="card-title fs-6 font-semibold">Mis pagos</h5>
             <div class="table-responsive">
               <table class="table text-nowrap align-middle mb-0">
                 <thead>
                   <tr class="border-2 border-bottom border-primary border-0"> 
                     <th scope="col" class="text-center">Ver mas</th>
-                    <th scope="col" class="text-center">Fecha del servicio</th>
-                    <th scope="col" class="text-center">Servicio</th>
-                    <th scope="col" class="text-center">Direccion</th>
+                    <th scope="col" class="text-center">Fecha</th>
+                    <th scope="col" class="text-center">Monto</th>
+                    <th scope="col" class="text-center">Servicio asociado</th>
+                    <th scope="col" class="text-center">Médodo de pago</th>
+                    <th scope="col" class="text-center">Detalles</th>
                     <th scope="col" class="text-center">Estado</th>
-                    <th scope="col" class="text-center">Precio</th>
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
-                  {% for contrato in contratos %}
+                  {% for pago in pagos %}
                     <tr>
                       <td class="text-center fw-medium">
                         <button type="button" class="flex justify-center items-center text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full px-3 py-3 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
                           <img src="{% static 'images/dash/logos/file-search.svg' %}" alt="Ícono" class="w-6 h-6">
                         </button>
                       </td>
-                      <td class="text-center fw-medium">{{contrato.fecha_servicio}}</td>
-                      <td class="text-center fw-medium">{{contrato.servicio_prestado.servicio.nombre}}</td>
-                      <td class="text-center fw-medium">{{contrato.direccion.direccionCompleta}}</td>
-                      <td class="text-center fw-medium">{{contrato.estado}}</td>
-                      <td class="text-center fw-medium">AR$ {{contrato.precio_acordado}}</td>
+                      <td class="text-center fw-medium">{{pago.fecha_pago}}</td>
+                      <td class="text-center fw-medium">{{pago.monto_pago}}</td>
+                      <td class="text-center fw-medium">{{pago.contrato.servicio_prestado.servicio.nombre}}</td>
+                      <td class="text-center fw-medium">{{pago.metodo_pago}}</td>
+                      <td class="text-center fw-medium">{{pago.detalles}}</td>
+                      <td class="text-center fw-medium">{{pago.estado}}</td>
                       {% comment %} <td>
                       <a href="javascript:void(0)" class="link-primary text-dark fw-medium d-block">/index.html</a>
                       </td> {% endcomment %}    
