--- a/apps/prestador/templates/prestador_facturas.html
+++ b/apps/prestador/templates/prestador_facturas.html
@@ -7,7 +7,7 @@
     <div class="col-lg-12 pl-1">
       <div class="card ">
         <div class="card-body ">
-          <h5 class="card-title fs-6 font-semibold">Facturas de {{ prestador.rol_usuario.usuario.nombre }} {{ prestador.rol_usuario.usuario.apellido  }}</h5>
+          <h5 class="card-title fs-6 font-semibold">Mis facturas</h5>
             <div class="table-responsive">
               <table class="table text-nowrap align-middle mb-0">
                 <thead>
@@ -15,7 +15,7 @@
                     <th scope="col" class="text-center">Ver mas</th>
                     <th scope="col" class="text-center">Fecha de emisión</th>
                     <th scope="col" class="text-center">Monto total</th>
-                    <th scope="col" class="text-center">Detalle servicio</th>
+                    <th scope="col" class="text-center">Detalle</th>
                   </tr>
                 </thead>
                 <tbody class="table-group-divider">
@@ -28,7 +28,7 @@
                       </td>
                       <td class="text-center fw-medium">{{ factura.fecha_emision }}</td>
                       <td class="text-center fw-medium">{{ factura.monto_total }}</td>
-                      <td class="text-center fw-medium">{{ contrato.servicio_prestado.servicio.nombre }}</td>
+                      <td class="text-center fw-medium">{{ factura.detalles }}</td>
                       {% comment %} <td>
                         <a href="javascript:void(0)" class="link-primary text-dark fw-medium d-block">/index.html</a>
                       </td> {% endcomment %}                         
