--- a/apps/prestador/templates/prestador_panel.html
+++ b/apps/prestador/templates/prestador_panel.html
@@ -7,17 +7,15 @@
     <div class="col-lg-12 pl-1">
       <div class="card ">
         <div class="card-body ">
-          <h5 class="card-title fs-6 font-semibold">NO SE QUE PONER ACÁ EN ESTA PANTALLA :( </h5>
+          <h5 class="card-title fs-6 font-semibold">Bienvenid@ {{ usuario.nombre}} {{ usuario.apellido }} </h5>
             <div class="table-responsive">
               <table class="table text-nowrap align-middle mb-0">
                 <thead>
                   <tr class="border-2 border-bottom border-primary border-0"> 
                     <th scope="col" class="text-center">Ver mas</th>
-                    <th scope="col" class="ps-4">Nombres</th>
+                    <th scope="col" class="text-center">Nombres</th>
                     <th scope="col" class="text-center">Apellidos</th>
                     <th scope="col" class="text-center">Email</th>
-                    <th scope="col" class="text-center">CUIL/CUIT</th>
-                    <th scope="col" class="text-center">Estudios</th>
                   </tr>
                 </thead>
                 <tbody class="table-group-divider">
@@ -27,11 +25,9 @@
                         <img src="{% static 'images/dash/logos/file-search.svg' %}" alt="Ícono" class="w-6 h-6">
                       </button>
                     </td>
-                    <td class="text-center fw-medium">{{ prestador.rol_usuario.usuario.nombre }}</td>
-                    <td class="text-center fw-medium">{{ prestador.apellido }}</td>
-                    <td class="text-center fw-medium">{{ prestador.email }}</td>
-                    <td class="text-center fw-medium">{{ prestador.cuit }}</td>
-                    <td class="text-center fw-medium">{{ prestador.estudios }}</td>
+                    <td class="text-center fw-medium">{{ usuario.nombre }}</td>
+                    <td class="text-center fw-medium">{{ usuario.apellido }}</td>
+                    <td class="text-center fw-medium">{{ usuario.email }}</td>
                      {% comment %} <td>
                       <a href="javascript:void(0)" class="link-primary text-dark fw-medium d-block">/index.html</a>
                     </td> {% endcomment %}
