Login redirige automaticamente a un usuario dependiendo de su rol

--- a/apps/prestador/templates/index_prestador.html
+++ b/apps/prestador/templates/index_prestador.html
@@ -39,7 +39,7 @@
               <h1 class='text-2xl font-medium'>INICIO</h1>
             </div>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="{% url 'panel' %}" aria-expanded="false">
+              <a class="sidebar-link" href="{% url 'prestador' %}" aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:home-smile-bold-duotone" class="fs-6"></iconify-icon>
                 </span>
