--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -40,7 +40,7 @@
                 {% endif %}
             </form>
             <div class="forgot-password">
-                <a href="#">Forgot Password?</a>
+                <a href="#">Olvidaste la contrasena?</a>
                 <a href="{% url 'register' %}">Registrate</a> <!-- Enlace de "Registrate" -->
             </div>
         </div>
