Se agregaron las funcionalidades de eliminar y modificar direccion en la seccion direccion

--- a/apps/prestador/templates/index_prestador.html
+++ b/apps/prestador/templates/index_prestador.html
@@ -18,7 +18,7 @@
     data-sidebar-position="fixed" data-header-position="fixed">
 
     <!-- Sidebar Start -->
-    <aside class="left-sidebar w-1/6">
+    <aside class="left-sidebar w-1/5">
       <!-- Sidebar scroll-->
       <div>
         <div class="brand-logo d-flex align-items-center justify-items-start">
@@ -139,7 +139,10 @@
         </nav>
       </header>
       <!--  Header End -->
+      <div>
+        <div class="pt-20">
           {% block content %} {% endblock %}
+        </div>
         <div class="py-6 px-6 text-center">
           <p class="mb-0 fs-4">Design and Developed by <a href="https://adminmart.com/" target="_blank"
             class="pe-1 text-primary text-decoration-underline">AdminMart.com</a>Distributed by <a href="https://themewagon.com/" target="_blank"
