--- a/apps/consumidor/templates/index_consumidor.html
+++ b/apps/consumidor/templates/index_consumidor.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" type="image/png" href="{% static 'images/dash/logos/seodashlogo.png' %}" />
   <link rel="stylesheet" href="{% static 'css/dash/styles.min.css' %}" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
     data-sidebar-position="fixed" data-header-position="fixed">
 
     <!-- Sidebar Start -->
-    <aside class="left-sidebar w-1/6">
+    <aside class="left-sidebar w-1/5">
       <!-- Sidebar scroll-->
       <div>
         <div class="brand-logo d-flex align-items-center justify-items-start">
@@ -142,13 +143,17 @@
         </nav>
       </header>
       <!--  Header End -->
+        <div class="pt-20">
+
           {% block content %} {% endblock %}
+        </div>
+        
         <div class="py-6 px-6 text-center">
           <p class="mb-0 fs-4">Design and Developed by <a href="https://adminmart.com/" target="_blank"
             class="pe-1 text-primary text-decoration-underline">AdminMart.com</a>Distributed by <a href="https://themewagon.com/" target="_blank"
             class="pe-1 text-primary text-decoration-underline">ThemeWagon</a></p>
         </div>    
-      </div>
+      
   </div>
   <script src="{% static 'libs/jquery/dist/jquery.min.js' %}"></script>
   <script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
