Agregamos div a index consumidor para el margin del side

--- a/apps/prestador/templates/index_prestador.html
+++ b/apps/prestador/templates/index_prestador.html
@@ -115,7 +115,7 @@
         </nav>
       </header>
       <!--  Header End -->
-      <div>
+      <div class="ml-10">
         <div class="pt-20">
           {% block content %} {% endblock %}
         </div>
