se crea Agregar servicio en el panel prestador

--- a/apps/prestador/templates/index_prestador.html
+++ b/apps/prestador/templates/index_prestador.html
@@ -71,6 +71,12 @@
               </a>
             </li>
             <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'crear_servicio' %}" aria-expanded="false">
+                <span><iconify-icon icon="solar:add-circle-bold-duotone" class="fs-6"></iconify-icon></span>
+                <span class="hide-menu fs-3">Agregar servicio</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'calificaciones' %}" aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:file-text-bold-duotone" class="fs-6"></iconify-icon>
